<<<<<<< 18e4216cdb254daef20aae6664d4f31913bc52b2
<resources>
    <string name="app_name">UCSD Rideshare</string>
    <string name="submit_post">Submit Post</string>
    <string name="additional_details">Additional Details</string>
    <string name="date">Date</string>
    <string name="destination">Destination</string>
    <string name="price">Price</string>
    <string name="start">Start</string>
    <string name="price_optional">Price (Optional)</string>
    <string name="title_activity_nav_activity">nav_activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="request_new_ride">Request New Ride</string>
</resources>
=======
<resources>
    <string name="app_name">UCSD Rideshare</string>
    <string name="submit_post">Submit Post</string>
    <string name="additional_details">Additional Details</string>
    <string name="date">Date</string>
    <string name="destination">Destination</string>
    <string name="price">Price</string>
    <string name="start">Start</string>
    <string name="price_optional">Price (Optional)</string>
    <string name="title_activity_nav_activity">nav_activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="request_new_ride">Request New Ride</string>
</resources>
>>>>>>> Actual Project with new bottombar
