<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.example.blog.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/startText"
        android:hint="@string/start"
        android:background="@drawable/roundbar"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/destText"
        android:hint="@string/destination"
        android:background="@drawable/roundbar"
        android:layout_below="@+id/startText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp"
        android:padding="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_marginTop="23dp"
        android:id="@+id/dateText"
        android:hint="@string/date"
        android:background="@drawable/roundbar"
        android:layout_below="@+id/destText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/dateText"
        android:background="@drawable/roundbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:id="@+id/priceText"
        android:hint="@string/price_optional"
        android:padding="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_below="@+id/priceText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:id="@+id/additText"
        android:hint="@string/additional_details"
        android:background="@drawable/roundbar"
        android:padding="5dp"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/submit_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/postBtn"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white" />

</RelativeLayout>
